# rust-book-manager

./: Cargo.toml  Dockerfile  Makefile.toml  README.md  compose.yaml
adapter/: Cargo.toml
adapter/migrations/: 20241027115733_start.down.sql  20241027115733_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs  book.rs  checkout.rs
adapter/src/redis/: mod.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  health.rs  mod.rs  user.rs
api/: Cargo.toml
api/src/: extractor.rs
api/src/handler/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
api/src/model/: book.rs  checkout.rs  user.rs
api/src/route/: auth.rs  book.rs  health.rs  user.rs  v1.rs
api/tests/api/: book.rs
data/: initial_setup.sql
kernel/: Cargo.toml
kernel/src/model/: id.rs  mod.rs
kernel/src/model/book/: mod.rs
kernel/src/model/checkout/: mod.rs
kernel/src/model/user/: mod.rs
kernel/src/repository/: auth.rs  book.rs  checkout.rs  user.rs
registry/: Cargo.toml
registry/src/: lib.rs
scripts/: login.sh
shared/: Cargo.toml
shared/src/: config.rs  env.rs  error.rs
src/: main.rs
