[package]
name = "rust-book-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = [
    "api",
    "kernel",
    "adapter",
    "shared",
    "registry",
]

[workspace.package]
edition = "2021"
publish = false
license = "MIT"

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
shared = { path = "./shared" }
registry = { path = "./registry" }
anyhow = "1.0.91"
axum = { version = "0.7.7", features = ["macros"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
tokio = { version = "1.41.0", features = ["full"] }
async-trait = "0.1.83"
derive-new = "0.7.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
serde = { version = "1.0.213", features = ["derive"] }
thiserror = "1.0.65"
utoipa = { version = "5.1.3", features = ["axum_extras", "uuid", "chrono"] }
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
secrecy = "0.10.3"


[dependencies]
# members
adapter.workspace = true
api.workspace = true
registry.workspace = true
shared.workspace = true
# external
async-trait.workspace = true
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
sqlx.workspace = true



[dev-dependencies]
rstest = "0.23.0"
