[package]
name = "adapter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# members
kernel.workspace = true
shared.workspace = true
# external
async-trait.workspace = true
derive-new.workspace = true
sqlx.workspace = true
uuid.workspace = true
redis.workspace = true
bcrypt.workspace = true

[dev-dependencies]
anyhow.workspace = true
