[package]
name = "api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# members
kernel.workspace = true
shared.workspace = true
registry.workspace = true
# external
axum.workspace = true
derive-new.workspace = true
serde.workspace = true
uuid.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
