[package]
name = "api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# members
kernel.workspace = true
shared.workspace = true
registry.workspace = true
# external
axum.workspace = true
axum-extra.workspace = true
derive-new.workspace = true
serde.workspace = true
uuid.workspace = true
thiserror.workspace = true
strum.workspace = true
garde.workspace = true
chrono.workspace = true
tokio.workspace = true
tower.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
anyhow.workspace = true
rstest = "0.23.0"
hyper = "1.5.0"
serde_json = "1.0.132"
