[package]
name = "kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
shared.workspace = true
async-trait.workspace = true
uuid.workspace = true
anyhow.workspace = true
serde.workspace = true
sqlx.workspace = true
strum.workspace = true
chrono.workspace = true
derive-new.workspace = true
