[package]
name = "shared"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
strum.workspace = true
thiserror.workspace = true
garde.workspace = true
sqlx.workspace = true
redis.workspace = true
bcrypt.workspace = true
uuid.workspace = true
axum.workspace = true
tracing.workspace = true
